All things except Admin Panel Notifcations and small fixes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+
+.active-pagination-link{
+    background-color: white;
+    color: black;
+}
